banner-lg-device-done

--- a/index.html
+++ b/index.html
@@ -40,6 +40,36 @@
           </div>
         </nav>
       </section>
+      <!-- banner section -->
+      <section class="banner">
+        <div class="banner-container container">
+          <div class="banner-content">
+            <p class="banner-title">Play Like The</p>
+            <p class="banner-title-goat">
+              <span>G.O.A.T</span>
+            </p>
+            <ul class="banner-li-container">
+              <li>
+                <img src="./icons/play.png" alt="" class="banner-icon" />
+                1-Click instant play
+              </li>
+              <li>
+                <img src="./icons/download.png" alt="" class="banner-icon" /> No
+                Download
+              </li>
+              <li>
+                <img src="./icons/users.png" alt="" class="banner-icon" /> 1000s
+                of supported online games
+              </li>
+            </ul>
+            <button class="btn-pink">Sign in</button>
+            <button class="btn-blue">Go Rogue</button>
+          </div>
+          <div class="banner-img">
+            <img src="./images/Group 18.png" alt="">
+          </div>
+        </div>
+      </section>
     </header>
     <main></main>
     <footer></footer>
