--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <button class="btn-blue">Go Rogue</button>
           </div>
           <div class="banner-img">
-            <img src="./images/Group 18.png" alt="">
+            <img src="./images/Group 18.png" alt="" class="banner-img-play">
           </div>
         </div>
       </section>
