online game section done with responive

--- a/index.html
+++ b/index.html
@@ -66,12 +66,48 @@
             <button class="btn-blue">Go Rogue</button>
           </div>
           <div class="banner-img">
-            <img src="./images/Group 18.png" alt="" class="banner-img-play">
+            <img src="./images/Group 18.png" alt="" class="banner-img-play" />
           </div>
         </div>
       </section>
     </header>
-    <main></main>
+    <main class="main-part">
+      <!-- online games section -->
+      <section class="online-games">
+        <h3 class="banner-title online-games-title">
+          Online Games <span>Demo Videos</span>
+        </h3>
+        <p class="online-games-para">
+          A Collection of Hilarious Videos to Brighten Your Day
+        </p>
+        <div class="online-games-container container">
+          <div class="card">
+            <img src="./images/Rectangle 4.png" alt="" class="hover-card-img" />
+            <p class="online-games-para card-para">
+              No Download. No Installs. Play games Instantly on Gamer.
+            </p>
+          </div>
+          <div class="card">
+            <img src="./images/Rectangle 5.png" alt="" class="hover-card-img" />
+            <p class="online-games-para card-para">
+              Did you score? #unblockedgames #school
+            </p>
+          </div>
+          <div class="card">
+            <img src="./images/Rectangle 7.png" alt="" class="hover-card-img" />
+            <p class="online-games-para card-para">
+              Breaking game records like OG
+            </p>
+          </div>
+          <div class="card">
+            <img src="./images/Rectangle 6.png" alt="" class="hover-card-img" />
+            <p class="online-games-para card-para">
+              Busted gaming on school laptop, but you are still lit.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
