play instantly lg device done

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <!-- online games section -->
       <section class="online-games">
         <h3 class="banner-title online-games-title">
-          Online Games <span>Demo Videos</span>
+          Online Games <span class="shared-span">Demo Videos</span>
         </h3>
         <p class="online-games-para">
           A Collection of Hilarious Videos to Brighten Your Day
@@ -104,6 +104,24 @@
             <p class="online-games-para card-para">
               Busted gaming on school laptop, but you are still lit.
             </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Play instantly section -->
+      <section class="play-instantly section">
+        <div class="instantly-play-container container">
+          <div class="instant-play-content">
+            <h3 class="banner-title instant-game-title">
+              <span class="shared-span">Play Instantly,</span><br> No Downloads<br>No Installs.
+            </h3>
+            <p class="instant-games-para">
+              Play games online for free without downloading. Just click the Play button and play instantly in your browser.
+            </p>
+          </div>
+          <div class="instant-play-img">
+            <img src="./images/Rectangle 55.png" alt="" class="img-instant-playOne">
+            <img src="./images/Rectangle 66.png" alt="" class="img-instant-playTwo">
           </div>
         </div>
       </section>
