play instantly section done

--- a/index.html
+++ b/index.html
@@ -113,15 +113,27 @@
         <div class="instantly-play-container container">
           <div class="instant-play-content">
             <h3 class="banner-title instant-game-title">
-              <span class="shared-span">Play Instantly,</span><br> No Downloads<br>No Installs.
+              <span class="shared-span">Play Instantly,</span><br />
+              No Downloads<br />
+              No Installs.
             </h3>
             <p class="instant-games-para">
-              Play games online for free without downloading. Just click the Play button and play instantly in your browser.
+              Play games online for free without<br />
+              downloading. Just click the Play button<br />and play instantly in
+              your browser.
             </p>
           </div>
-          <div class="instant-play-img">
-            <img src="./images/Rectangle 55.png" alt="" class="img-instant-playOne">
-            <img src="./images/Rectangle 66.png" alt="" class="img-instant-playTwo">
+          <div class="instant-play-img-container">
+            <img
+              src="./images/Rectangle 55.png"
+              alt=""
+              class="img-instant-playOne"
+            />
+            <img
+              src="./images/Rectangle 66.png"
+              alt=""
+              class="img-instant-playTwo"
+            />
           </div>
         </div>
       </section>
