various game section processing

--- a/index.html
+++ b/index.html
@@ -137,6 +137,50 @@
           </div>
         </div>
       </section>
+
+      <!-- various game choices -->
+      <section class="various-game section">
+        <div class="various-game-container container">
+            <button class="gamer game-one">
+              <img src="./images/Rectangle 11.png" alt="" />
+              <p>Action Games</p>
+            </button>
+            <button class="gamer game-two">
+              <img src="./images/Rectangle 12.png" alt="" />
+              <p>Adventure Games</p>
+            </button>
+            <button class="gamer game-three">
+              <img src="./images/Rectangle 13.png" alt="" />
+              <p>Arcade Games</p>
+            </button>
+            <button class="gamer game-four">
+              <img src="./images/Rectangle 14.png" alt="" />
+              <p>Educational Games</p>
+            </button>
+
+            <button class="gamer game-fivr">
+              <img src="./images/Rectangle 15.png" alt="" />
+              <p>Word Games</p>
+            </button>
+            <button class="gamer game-six">
+              <img src="./images/Rectangle 16.png" alt="" />
+              <p>Role Palying Games</p>
+            </button>
+            <button class="gamer game-seven">
+              <img src="./images/Rectangle 17.png" alt="" />
+              <p>Role Palying Games</p>
+            </button>
+            <button class="gamer game-eight">
+              <img src="./images/Rectangle 18.png" alt="" />
+              <p>Puzzle Games</p>
+            </button>
+            <button class="gamer game-nine">
+              <img src="./images/Rectangle 19.png" alt="" />
+              <p>Strategy Games</p>
+            </button>
+          
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
