various game section done

--- a/index.html
+++ b/index.html
@@ -141,44 +141,53 @@
       <!-- various game choices -->
       <section class="various-game section">
         <div class="various-game-container container">
-            <button class="gamer game-one">
+          <div class="game-group-one-container">
+            <button class="gamer">
               <img src="./images/Rectangle 11.png" alt="" />
               <p>Action Games</p>
             </button>
-            <button class="gamer game-two">
+
+            <button class="gamer">
               <img src="./images/Rectangle 12.png" alt="" />
               <p>Adventure Games</p>
             </button>
-            <button class="gamer game-three">
+
+            <button class="gamer">
               <img src="./images/Rectangle 13.png" alt="" />
               <p>Arcade Games</p>
             </button>
-            <button class="gamer game-four">
+
+            <button class="gamer">
               <img src="./images/Rectangle 14.png" alt="" />
               <p>Educational Games</p>
             </button>
-
-            <button class="gamer game-fivr">
+            <button class="gamer">
               <img src="./images/Rectangle 15.png" alt="" />
               <p>Word Games</p>
             </button>
-            <button class="gamer game-six">
+          </div>
+
+          <div class="game-group-two-container">
+            <button class="gamer">
               <img src="./images/Rectangle 16.png" alt="" />
-              <p>Role Palying Games</p>
+              <p>Fight Games</p>
             </button>
-            <button class="gamer game-seven">
+
+            <button class="gamer">
               <img src="./images/Rectangle 17.png" alt="" />
-              <p>Role Palying Games</p>
+              <p>Bird Games</p>
             </button>
-            <button class="gamer game-eight">
+
+            <button class="gamer">
               <img src="./images/Rectangle 18.png" alt="" />
               <p>Puzzle Games</p>
             </button>
-            <button class="gamer game-nine">
+
+            <button class="gamer">
               <img src="./images/Rectangle 19.png" alt="" />
               <p>Strategy Games</p>
             </button>
-          
+          </div>
         </div>
       </section>
     </main>
