--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
       href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+
     <!-- CSS links -->
     <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="stylesheet" href="./styles/responsive.css" />
+
+    <!-- font-awesome-link -->
+    <script src="https://kit.fontawesome.com/1163c5cabe.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
@@ -191,6 +195,44 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <!-- footer section -->
+      <section>
+        <div class="footer-container">
+          <div class="footer-logo">
+            <img src="./images/Frame.png" alt="" />
+            <h3 class="title"><span class="shared-span">G</span>amer</h3>
+          </div>
+          <ul class="footer-li-container">
+            <li>Our stories</li>
+            <li>Games</li>
+            <li>Web Games</li>
+            <li>Careers</li>
+            <li>Supported</li>
+            <li>My Account</li>
+          </ul>
+          <button>
+            <i class="fa-brands fa-twitter footer-icon"></i>
+          </button>
+          <button>
+            <i class="fa-brands fa-facebook footer-icon "></i>
+          </button>
+          <button>
+            <i class="fa-brands fa-youtube footer-icon"></i>
+          </button>
+          <ul class="small-list-container">
+            <li><small>Terms and Conditions</small></li>
+            <li><small>Privacy Policy</small></li>
+            <li><small>Cookie Policy</small></li>
+            <li><small>Privacy Settings</small></li>
+          </ul>
+          <p>
+            <small>
+              Play Games&commat;Gamer&commat;2000-2023 Gamer Bangladesh</small
+            >
+          </p>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
