--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="stylesheet" href="./styles/responsive.css" />
 
-    <!-- font-awesome-link -->
-    <script src="https://kit.fontawesome.com/1163c5cabe.js" crossorigin="anonymous"></script>
+   
   </head>
   <body>
     <header>
@@ -212,13 +211,13 @@
             <li>My Account</li>
           </ul>
           <button>
-            <i class="fa-brands fa-twitter footer-icon"></i>
+            <img src="./icons/facebook 1-PhotoRoom.png-PhotoRoom.png" alt="" class="nav-img"/>
           </button>
           <button>
-            <i class="fa-brands fa-facebook footer-icon "></i>
+            <img src="./icons/twitter 1-PhotoRoom.png-PhotoRoom.png" alt="" class="nav-img"/>
           </button>
           <button>
-            <i class="fa-brands fa-youtube footer-icon"></i>
+            <img src="./icons/YT-PhotoRoom.png-PhotoRoom.png" alt="" class="nav-img"/>
           </button>
           <ul class="small-list-container">
             <li><small>Terms and Conditions</small></li>
