--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <footer>
       <!-- footer section -->
       <section>
-        <div class="footer-container">
+        <div class="footer-container footer-center">
           <div class="footer-logo">
             <img src="./images/Frame.png" alt="" />
             <h3 class="title"><span class="shared-span">G</span>amer</h3>
