card hover overlay

--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
     <!-- CSS links -->
     <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="stylesheet" href="./styles/responsive.css" />
-
-   
   </head>
   <body>
     <header>
@@ -85,25 +83,54 @@
         </p>
         <div class="online-games-container container">
           <div class="card">
-            <img src="./images/Rectangle 4.png" alt="" class="hover-card-img" />
+              <img
+                src="./images/Rectangle 4.png"
+                alt=""
+                class="hover-card-img"
+              />
+            
+            <div class="overlay">
+              <span class="play-icon"
+                ><img src="./icons/play-2.png" alt="" class="card-hover-icon"
+              /></span>
+              <p class="watch-later-para">Watch later</p>
+            </div>
             <p class="online-games-para card-para">
               No Download. No Installs. Play games Instantly on Gamer.
             </p>
           </div>
           <div class="card">
             <img src="./images/Rectangle 5.png" alt="" class="hover-card-img" />
+            <div class="overlay">
+              <span class="play-icon"
+                ><img src="./icons/play-2.png" alt="" class="card-hover-icon"
+              /></span>
+              <p class="watch-later-para">Watch later</p>
+            </div>
             <p class="online-games-para card-para">
               Did you score? #unblockedgames #school
             </p>
           </div>
           <div class="card">
             <img src="./images/Rectangle 7.png" alt="" class="hover-card-img" />
+            <div class="overlay">
+              <span class="play-icon"
+                ><img src="./icons/play-2.png" alt="" class="card-hover-icon"
+              /></span>
+              <p class="watch-later-para">Watch later</p>
+            </div>
             <p class="online-games-para card-para">
               Breaking game records like OG
             </p>
           </div>
           <div class="card">
             <img src="./images/Rectangle 6.png" alt="" class="hover-card-img" />
+            <div class="overlay">
+              <span class="play-icon"
+                ><img src="./icons/play-2.png" alt="" class="card-hover-icon"
+              /></span>
+              <p class="watch-later-para">Watch later</p>
+            </div>
             <p class="online-games-para card-para">
               Busted gaming on school laptop, but you are still lit.
             </p>
@@ -211,13 +238,25 @@
             <li>My Account</li>
           </ul>
           <button>
-            <img src="./icons/facebook 1-PhotoRoom.png-PhotoRoom.png" alt="" class="nav-img"/>
+            <img
+              src="./icons/facebook 1-PhotoRoom.png-PhotoRoom.png"
+              alt=""
+              class="nav-img"
+            />
           </button>
           <button>
-            <img src="./icons/twitter 1-PhotoRoom.png-PhotoRoom.png" alt="" class="nav-img"/>
+            <img
+              src="./icons/twitter 1-PhotoRoom.png-PhotoRoom.png"
+              alt=""
+              class="nav-img"
+            />
           </button>
           <button>
-            <img src="./icons/YT-PhotoRoom.png-PhotoRoom.png" alt="" class="nav-img"/>
+            <img
+              src="./icons/YT-PhotoRoom.png-PhotoRoom.png"
+              alt=""
+              class="nav-img"
+            />
           </button>
           <ul class="small-list-container">
             <li><small>Terms and Conditions</small></li>
