--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gamer Zone</title>
+    <title>Gamer</title>
     <link rel="shortcut icon" href="./images/Frame.png" type="image/x-icon" />
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -83,56 +83,32 @@
         </p>
         <div class="online-games-container container">
           <div class="card">
-              <img
-                src="./images/Rectangle 4.png"
-                alt=""
-                class="hover-card-img"
-              />
-            
-            <div class="overlay">
-              <span class="play-icon"
-                ><img src="./icons/play-2.png" alt="" class="card-hover-icon"
-              /></span>
-              <p class="watch-later-para">Watch later</p>
-            </div>
+            <img src="./images/Rectangle 4.png" alt="" class="hover-card-img" />
+
             <p class="online-games-para card-para">
               No Download. No Installs. Play games Instantly on Gamer.
             </p>
           </div>
           <div class="card">
             <img src="./images/Rectangle 5.png" alt="" class="hover-card-img" />
-            <div class="overlay">
-              <span class="play-icon"
-                ><img src="./icons/play-2.png" alt="" class="card-hover-icon"
-              /></span>
-              <p class="watch-later-para">Watch later</p>
-            </div>
+
             <p class="online-games-para card-para">
-              Did you score? #unblockedgames #school
+              No Download. No Installs. Play games Instantly on Gamer.
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="./images/Rectangle 6.png" alt="" class="hover-card-img" />
+
+            <p class="online-games-para card-para">
+              No Download. No Installs. Play games Instantly on Gamer.
             </p>
           </div>
           <div class="card">
             <img src="./images/Rectangle 7.png" alt="" class="hover-card-img" />
-            <div class="overlay">
-              <span class="play-icon"
-                ><img src="./icons/play-2.png" alt="" class="card-hover-icon"
-              /></span>
-              <p class="watch-later-para">Watch later</p>
-            </div>
+
             <p class="online-games-para card-para">
-              Breaking game records like OG
-            </p>
-          </div>
-          <div class="card">
-            <img src="./images/Rectangle 6.png" alt="" class="hover-card-img" />
-            <div class="overlay">
-              <span class="play-icon"
-                ><img src="./icons/play-2.png" alt="" class="card-hover-icon"
-              /></span>
-              <p class="watch-later-para">Watch later</p>
-            </div>
-            <p class="online-games-para card-para">
-              Busted gaming on school laptop, but you are still lit.
+              No Download. No Installs. Play games Instantly on Gamer.
             </p>
           </div>
         </div>
@@ -191,7 +167,7 @@
               <img src="./images/Rectangle 14.png" alt="" />
               <p>Educational Games</p>
             </button>
-            <button class="gamer">
+            <button class="gamer word-gamer">
               <img src="./images/Rectangle 15.png" alt="" />
               <p>Word Games</p>
             </button>
@@ -239,21 +215,21 @@
           </ul>
           <button>
             <img
-              src="./icons/facebook 1-PhotoRoom.png-PhotoRoom.png"
+              src="./icons/fb.png"
               alt=""
               class="nav-img"
             />
           </button>
           <button>
             <img
-              src="./icons/twitter 1-PhotoRoom.png-PhotoRoom.png"
+              src="./icons/twitter.png"
               alt=""
               class="nav-img"
             />
           </button>
           <button>
             <img
-              src="./icons/YT-PhotoRoom.png-PhotoRoom.png"
+              src="./icons/youtube.png"
               alt=""
               class="nav-img"
             />
