--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               </li>
               <li>
                 <img src="./icons/users.png" alt="" class="banner-icon" /> 1000s
-                of supported online games
+                of Active users
               </li>
             </ul>
             <button class="btn-pink">Sign in</button>
