hover effect added

--- a/index.html
+++ b/index.html
@@ -83,15 +83,88 @@
         </p>
         <div class="online-games-container container">
           <div class="card">
-            <img src="./images/Rectangle 4.png" alt="" class="hover-card-img" />
-
+            <div class="hover-overlay">
+              <img src="./images/Rectangle 4.png" alt="" class="hover-card-img" />
+              <div class="hover-content">
+                <span class="watch-later-icon">
+                  <img src="./icons/play-2.png" alt="" class="watch-later-icon-img">
+                </span>
+                <p class="watch-later-text">
+                  Watch Later
+                </p>
+              </div>
+            </div>
             <p class="online-games-para card-para">
               No Download. No Installs. Play games Instantly on Gamer.
             </p>
           </div>
           <div class="card">
-            <img src="./images/Rectangle 5.png" alt="" class="hover-card-img" />
+            <div class="hover-overlay">
+              <img src="./images/Rectangle 5.png" alt="" class="hover-card-img" />
+              <div class="hover-content">
+                <span class="watch-later-icon">
+                  <img src="./icons/play-2.png" alt="" class="watch-later-icon-img">
+                </span>
+                <p class="watch-later-text">
+                  Watch Later
+                </p>
+              </div>
+            </div>
+            <p class="online-games-para card-para">
+              No Download. No Installs. Play games Instantly on Gamer.
+            </p>
+          </div>
+          <div class="card">
+            <div class="hover-overlay">
+              <img src="./images/Rectangle 6.png" alt="" class="hover-card-img" />
+              <div class="hover-content">
+                <span class="watch-later-icon">
+                  <img src="./icons/play-2.png" alt="" class="watch-later-icon-img">
+                </span>
+                <p class="watch-later-text">
+                  Watch Later
+                </p>
+              </div>
+            </div>
+            <p class="online-games-para card-para">
+              No Download. No Installs. Play games Instantly on Gamer.
+            </p>
+          </div>
+          <div class="card">
+            <div class="hover-overlay">
+              <img src="./images/Rectangle 7.png" alt="" class="hover-card-img" />
+              <div class="hover-content">
+                <span class="watch-later-icon">
+                  <img src="./icons/play-2.png" alt="" class="watch-later-icon-img">
+                </span>
+                <p class="watch-later-text">
+                  Watch Later
+                </p>
+              </div>
+            </div>
+            <p class="online-games-para card-para">
+              No Download. No Installs. Play games Instantly on Gamer.
+            </p>
+          </div>
+          
 
+
+
+
+
+
+          <!-- <div class="card">
+            <div class="hover-overlay">
+              <img src="./images/Rectangle 4.png" alt="" class="hover-card-img" />
+              <div class="hover-content">
+                <span class="watch-later-icon">
+                  <img src="./icons/play-2.png" alt="" class="watch-later-icon-img">
+                </span>
+                <p class="watch-later-text">
+                  Watch Later
+                </p>
+              </div>
+            </div>
             <p class="online-games-para card-para">
               No Download. No Installs. Play games Instantly on Gamer.
             </p>
@@ -110,9 +183,10 @@
             <p class="online-games-para card-para">
               No Download. No Installs. Play games Instantly on Gamer.
             </p>
-          </div>
+          </div> -->
         </div>
       </section>
+
 
       <!-- Play instantly section -->
       <section class="play-instantly section">
