various game section done

--- a/index.html
+++ b/index.html
@@ -231,6 +231,50 @@
             </button>
           </div>
         </div>
+        <div class="various-game-container-two container">
+          <div class="container-one">
+            <button class="gamer">
+              <img src="./images/Rectangle 11.png" alt="" />
+              <p>Action Games</p>
+            </button>
+            <button class="gamer">
+              <img src="./images/Rectangle 12.png" alt="" />
+              <p>Adventure Games</p>
+            </button>
+            <button class="gamer">
+              <img src="./images/Rectangle 13.png" alt="" />
+              <p>Arcade Games</p>
+            </button>
+          </div>
+          <div class="container-two">
+            <button class="gamer">
+              <img src="./images/Rectangle 14.png" alt="" />
+              <p>Educational Games</p>
+            </button>
+            <button class="gamer">
+              <img src="./images/Rectangle 15.png" alt="" />
+              <p>Word Games</p>
+            </button>
+            <button class="gamer">
+              <img src="./images/Rectangle 16.png" alt="" />
+              <p>Fight Games</p>
+            </button>
+          </div>
+          <div class="container-three">
+            <button class="gamer">
+              <img src="./images/Rectangle 17.png" alt="" />
+              <p>Bird Games</p>
+            </button>
+            <button class="gamer">
+              <img src="./images/Rectangle 18.png" alt="" />
+              <p>Puzzle Games</p>
+            </button>
+            <button class="gamer">
+              <img src="./images/Rectangle 19.png" alt="" />
+              <p>Strategy Games</p>
+            </button>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
